fix overflow

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -14,6 +14,7 @@
 html {
     font-size: 16px;
     scroll-behavior: smooth;
+    overflow-x: hidden;
 }
 
 body {
